--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1046,7 +1046,12 @@ function expand(e, id) {
               <span class="expand">Play Edition:</span> ${data.play_edition}<br>
               <span class="expand">Format:</span> ${data.format}<br>
               <span class="expand">Leaves:</span> ${data.leaves}<br>
-              ${typeof data.total_editions === 'undefined' ? '' : '<span class="expand">Total Editions:</span>' + data.total_editions}<br>
+              ${typeof data.total_editions === 'undefined' ? '' : '<br><span class="expand">Total Editions:</span> ' + data.total_editions}<br>
+              ${data.variants === '' ? '' : '<br><span class="expand">Variants:</span> ' + data.variants}<br>
+              ${data.in_collection === '' ? '' : '<br><span class="expand">In Collection:</span> ' + data.in_collection}<br>
+              ${data.collection_contains === '' ? '' : '<br><span class="expand">Collection Contains:</span> ' + data.collection_contains}<br>
+              ${data.independent_playbook === '' ? '' : '<br><span class="expand">Also appears as a bibliographically independent playbook in </span> ' + data.independent_playbook}<br>
+              ${data.also_in_collection === '' ? '' : '<br><span class="expand">Also appears in collection: </span> ' + data.also_in_collection}<br>
               </p>
             </div>
             
@@ -1055,10 +1060,10 @@ function expand(e, id) {
               <p><span class="expand">Record Type:</span> ${data.record_type}<br>
               <span class="expand">Play Type:</span> ${data.play_type}<br>
               <span class="expand">Genre (Annals):</span> ${data.genre}<br>
-              <span class="expand">Date of First Publication:</span> ${data.date_first_publication}<br>
-              <span class="expand">Date of First Performance:</span> ${data.date_first_performance}<br>
-              <span class="expand">Theater:</span> ${data.theater}<br>
-              <span class="expand">Theater type:</span> ${data.theater_type}<br>
+              ${!data.date_first_publication ? '' : '<br><span class="expand">Date of First Publication: </span> ' + data.date_first_publication}<br>
+              ${!data.date_first_performance ? '' : '<span class="expand">Date of First Performance: </span> ' + data.date_first_performance}<br>
+              ${!data.theater ? '' : '<span class="expand">Theater: </span> ' + data.theater}<br>
+              ${data.theater_type === "None" ? '' : '<span class="expand">Theater type: </span> ' + data.theater_type}<br>
               <span class="expand">Company of First Performance:</span> ${data.company_first_performance}<br>
               <span class="expand">Company Attribution:</span> ${data.company_attribution}</p>
             </div>
