now need to convert js to jinja

--- a/main/templates/item_page.html
+++ b/main/templates/item_page.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
+<section id="search" class="services section-bg">
+    <div style="min-height: 600px; margin-top:50px" class="container" >
   
-    <td colspan="5">
-      <div class="card" style="width: 100%;">
-         {{ data }}
+<td colspan="5">
+      <div class="card" style="width: 100%; ">
         <div class="card-body">
           <div class="row">
             <div class="col-5">
@@ -108,4 +109,6 @@
     </td>
     
   </tr>
+</div>
+</section>
 {% endblock %}
