changes to models to facilitate db ui, found broken links

--- a/main/templates/item_page.html
+++ b/main/templates/item_page.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
+
 {% block content %}
 <section id="search" class="services section-bg">
     <div style="min-height: 600px; margin-top:50px" class="container" >
   
 <td colspan="5">
+    <!-- TODO add title, author -->
       <div class="card" style="width: 100%; ">
         <div class="card-body">
           <div class="row">
@@ -200,4 +202,5 @@
   </tr>
 </div>
 </section>
+
 {% endblock %}
