now passing new models to build and frontend

--- a/main/templates/item_page.html
+++ b/main/templates/item_page.html
@@ -5,9 +5,16 @@
     <div style="min-height: 600px; margin-top:50px" class="container" >
   
 <td colspan="5">
-    <!-- TODO add title, author -->
-      <div class="card" style="width: 100%; ">
+    
+    <div class="card" style="width: 100%; ">
         <div class="card-body">
+            <div class="row">
+                <div class="col-5"><h4>{{data.title}}</h4></div> <div class="col-1">{{ data.year}}</div> <div class="col-5">{{data.authors_display}}</div>
+            </div>
+            </div></div>
+    <div class="card" style="width: 100%; ">
+        <div class="card-body">
+        <div class="row">
           <div class="row">
             <div class="col-5">
               <strong>Reference Information</strong>
