--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1027,7 +1027,7 @@ slider.noUiSlider.on('change', (event) => {
       
 function expand(e, id) {
   let data = item_data[id];
-  if (data) {
+  
   e.outerHTML = `
   <tr id="${data.id}" onclick="collapse(this, ${data.id});"><td class="deep_id">${data.deep_id}</td><td class="year">${data.year}</td><td class="authors_display">${data.authors_display}</td><td class="title">${data.title}</td><td>Collapse</td>
   
@@ -1052,7 +1052,7 @@ function expand(e, id) {
                 ${!data.format ? '' : '<span class="expand">Format: </span><span id="format">' + data.format + '</span><br>'}
                 ${!data.leaves ? '' : '<span class="expand">Leaves: </span><span id="leaves">' + data.leaves + '</span><br>'}
                 ${typeof data.total_editions === 'undefined' ? '' : '<br><span class="expand">Total Editions:</span><span id="total_editions">' + data.total_editions + '</span><br>'}
-                ${data.variants === '' ? '' : '<br><span class="expand">Variants:</span><span id="variants">' + data.variants + '<br>'}
+                ${data.variants === '' ? '' : '<br><span class="expand">Variants:</span><span id="variants">' + data.variants + ' ' + data.variant_link + '<br>'}
                 ${data.in_collection === '' ? '' : '<br><span class="expand">In Collection:</span><span id="in_collection">' + data.in_collection + '</span><br>'}
                 ${data.collection_contains === '' ? '' : '<br><span class="expand">Collection Contains:</span><span id="collection_contains">' + data.collection_contains + '</span><br>'}
                 ${data.independent_playbook === '' ? '' : '<br><span class="expand">Also appears as a bibliographically independent playbook in </span><span id="independent_playbook">' + data.independent_playbook + '</span><br>'}
@@ -1139,8 +1139,8 @@ function expand(e, id) {
     </td>
     
   </tr>`;
-  }
 }
+
 
 function collapse(e, id) {
   
