handling independent_playbook, still don't understand t this data, need to ask

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1055,7 +1055,7 @@ function expand(e, id) {
                 ${data.variants === '' ? '' : '<br><span class="expand">Variants:</span><span id="variants"> ' + data.variants + ' ' + data.variant_link + '<br>'}
                 ${data.in_collection === '' ? '' : '<br><span class="expand">In Collection:</span><span id="in_collection"> ' + data.in_collection + '</span><br>'}
                 ${data.collection_contains === '' ? '' : '<br><span class="expand">Collection Contains:</span><span id="collection_contains"> ' + data.collection_contains + '</span><br>'}
-                ${data.independent_playbook === '' ? '' : '<br><span class="expand">Also appears as a bibliographically independent playbook in </span><span id="independent_playbook">' + data.independent_playbook + '</span><br>'}
+                ${!data.independent_playbook ? '' : '<br><span class="expand">Also appears as a bibliographically independent playbook in </span><span id="independent_playbook"><a href="' + data.independent_playbook_link_id + '.html">' + data.independent_playbook + '</a></span><br>'}
                 ${data.also_in_collection === '' ? '' : '<br><span class="expand">Also appears in collection: </span><span id="also_in_collection">' + data.also_in_collection + '</span><br>'}
               </p>
             </div>
