--- a/main/templates/item_page.html
+++ b/main/templates/item_page.html
@@ -58,7 +58,7 @@
                 <br><span class="expand">Collection Contains:</span><span id="collection_contains"> {{ data.collection_contains|safe }}</span><br>
                 {% endif %}
                 {% if data.independent_playbook %}
-                <br><span class="expand">Also appears as a bibliographically independent playbook in </span><span id="independent_playbook">{{ data.independent_playbook }}</span><br>
+                <br><span class="expand">Also appears as a bibliographically independent playbook in </span><span id="independent_playbook"><a href="{{ data.independent_playbook_link_id }}.html">{{ data.independent_playbook }}</a></span><br>
                 {% endif %}
                 {% if data.also_in_collection %}
                 <br><span class="expand">Also appears in collection: </span><span id="also_in_collection">{{ data.also_in_collection }}</span><br>
