--- a/main/templates/item_page.html
+++ b/main/templates/item_page.html
@@ -61,7 +61,7 @@
                 <br><span class="expand">Also appears as a bibliographically independent playbook in </span><span id="independent_playbook"><a href="{{ data.independent_playbook_link_id }}.html">{{ data.independent_playbook }}</a></span><br>
                 {% endif %}
                 {% if data.also_in_collection %}
-                <br><span class="expand">Also appears in collection: </span><span id="also_in_collection">{{ data.also_in_collection }}</span><br>
+                <br><span class="expand">Also appears in collection: </span><span id="also_in_collection">{{ data.also_in_collection_link|safe }}</span><br>
                 {% endif %}
             </p>
             </div>
