--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -17,9 +17,13 @@
       <div class="col-lg-12 col-md-12">
         <div class="icon-box">
           <div class="icon"><i class="bi bi-search" style="color: #330e40;" no-repeat center center fixed;"></i></div>
-         
+          
   
           <input id="search_bar" style="margin-left:10px; width:100%" type="text" name="search" placeholder="Search for a playbook...">
+          <button id="loadingIndex" class="btn btn-link" type="button" disabled>
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            Loading...
+          </button>
           <p>
             <a class="btn btn-light float-end" onclick="toggleAdvancedSearch();">
               advanced search
@@ -241,6 +245,7 @@ fetch("../assets/lunr/search.json").then(
       ).then(
         function(json){
           index = lunr.Index.load(json);
+          document.getElementById('loadingIndex').remove()
         });
      
 //listen for search_bar
