end of day 8/31

--- a/main/templates/item_page.html
+++ b/main/templates/item_page.html
@@ -9,7 +9,7 @@
     <div class="card" style="width: 100%; ">
         <div class="card-body">
             <div class="row">
-                <div class="col-5"><h4>{{data.title}}</h4></div><div class="col-5"><h4>{{data.authors_display}}</h4></div><div class="col-1"><h4>{{ data.year}}</h4></div>
+                <div class="col-5"><h4 id="title">{{data.title}}</h4></div><div class="col-5"><h4 id="authors">{{data.authors_display}}</h4></div><div class="col-1"><h4 id="year">{{ data.year}}</h4></div>
             </div>
             </div></div>
     <div class="card" style="width: 100%; ">
